# alacritty

./: CHANGELOG.md  Cargo.toml  README.md
alacritty/: Cargo.toml
alacritty/src/: event.rs  ipc.rs  logging.rs  main.rs  message_bar.rs  scheduler.rs  window_context.rs
alacritty/src/config/: bindings.rs  mod.rs  monitor.rs
alacritty/src/display/: mod.rs  window.rs
alacritty/src/input/: keyboard.rs  mod.rs
alacritty/src/renderer/: rects.rs
alacritty_config/: Cargo.toml
alacritty_config_derive/: Cargo.toml
alacritty_terminal/: Cargo.toml
alacritty_terminal/src/term/: mod.rs
docs/: winit-0.31-migration.md
