[workspace]
members = [
    "alacritty",
    "alacritty_terminal",
    "alacritty_config",
    "alacritty_config_derive",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.93"

[profile.release]
lto = "thin"
debug = 1
incremental = false

[workspace.dependencies]
toml = "1.0.2"
toml_edit = "0.25.2"

[patch.crates-io]
winit = { git = "https://github.com/earthlings-dev/winit.git", branch = "master" }
crossfont = { git = "https://github.com/earthlings-dev/crossfont.git", branch = "master" }
