[package]
name = "alacritty_config_derive"
version = "0.2.6-dev"
authors = ["Christian Duerr <contact@christianduerr.com>"]
license = "MIT OR Apache-2.0"
description = "Failure resistant deserialization derive"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
edition.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = { version = "2.0.116", features = ["derive", "parsing", "proc-macro", "printing"], default-features = false }

[dev-dependencies.alacritty_config]
path = "../alacritty_config"
version = "0.2.4-dev"

[dev-dependencies]
log = "0.4.29"
serde = { version = "1.0.228", features = ["derive"] }
toml.workspace = true
