[package]
name = "alacritty_terminal"
version = "0.25.2-dev"
authors = ["Christian Duerr <contact@christianduerr.com>", "Joe Wilm <joe@jwilm.com>"]
license = "Apache-2.0"
description = "Library for writing terminal emulators"
readme = "../README.md"
homepage = "https://alacritty.org"
repository = "https://github.com/alacritty/alacritty"
edition.workspace = true
rust-version.workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "bitflags/serde", "vte/serde"]

[dependencies]
base64 = "0.22.1"
bitflags = "2.11.0"
home = "0.5.12"
libc = "0.2"
log = "0.4"
parking_lot = "0.12.5"
polling = "3.11.0"
regex-automata = "0.4.14"
unicode-width = "0.2.2"
vte = { version = "0.15.0", default-features = false, features = ["std", "ansi"] }
serde = { version = "1", features = ["derive", "rc"], optional = true }

[target.'cfg(unix)'.dependencies]
rustix-openpty = "0.2.0"
rustix = { version = "1.1.3", default-features = false, features = ["std"] }
signal-hook = "0.4.3"

[target.'cfg(windows)'.dependencies]
piper = "0.2.4"
miow = "0.6.1"
windows-sys = { version = "0.61.2", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}

[dev-dependencies]
serde_json = "1.0.149"
